--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>document</title>
 </head>
 <body>
-    <h1>Hello from JavaScript!</h1>
-
-    <script src="js/main.js" type="module"></script>
+    <body>
+        <h1>Bienvenido a DeadConsole</h1>
+        <form id="heroForm"> <label for="heroName">Nombre del héroe:</label>
+            <input type="text" id="heroName" name="heroName"><br><br>
+            <button type="submit">Crear Héroe</button>
+        </form>
+        <script src="js/main.js" type="module"></script> 
+    </body>
+    </html>
 </body>
 </html>
