feat: :sparkles: actualziando el codigo para que cumpla con los parametros de combate

--- a/index.html
+++ b/index.html
@@ -23,10 +23,15 @@
 
     <div id="gameContainer">
         <div id="gameLog"></div>
+        <div>
+            <p>Vida del Héroe: <span id="heroVida">100</span></p> 
+            <p>Daño del Héroe: <span id="heroDaño">20</span></p>
+            <p>Vida del Monstruo: <span id="monstruoVida"></span></p>
+        </div>
         <button id="atacarBtn" disabled>Atacar</button>
         <button id="investigarBtn" disabled>Investigar</button>
     </div>
-
+    
     <script src="/main.js" type="module"></script>
 </body>
 </html>
