feat: :sparkles: juego sin items funcional

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <button id="atacarBtn" disabled>Atacar</button>
         <button id="investigarBtn" disabled>Investigar</button>
-        <button id="reiniciarBtn" disabled>Reiniciar</button> <script src="js/main.js" type="module"></script>
+        <button id="reiniciarBtn" disabled>Reiniciar</button> <script src="/main.js" type="module"></script>
     </div>
 
     <script src="/main.js" type="module"></script>
