feat: :sparkles: creando la parte de inventarios

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <button id="atacarBtn" disabled>Atacar</button>
         <button id="investigarBtn" disabled>Investigar</button>
         <button id="reiniciarBtn" disabled>Reiniciar</button> <script src="/main.js" type="module"></script>
+        <button id="inventarioBtn" disabled>Inventario</button>
     </div>
 
     <script src="/main.js" type="module"></script>
